--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <div class="site-slider">
                 <div class="slider-one">
                     <div>
-                        <img src="./assets/item-1.jpg" class="img-fluid" alt="Banner 1">
+                        <img src="../assets/item-1.jpg" class="img-fluid" alt="Banner 1">
                     </div>
                     <div>
                         <img src="./assets/item-2.jpg" class="img-fluid" alt="Banner 2">
