--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
                         <img src="../assets/item-1.jpg" class="img-fluid" alt="Banner 1">
                     </div>
                     <div>
-                        <img src="./assets/item-2.jpg" class="img-fluid" alt="Banner 2">
+                        <img src="../assets/item-2.jpg" class="img-fluid" alt="Banner 2">
                     </div>
                     <div>
-                        <img src="./assets/item-3.jpg" class="img-fluid" alt="Banner 3">
+                        <img src="../assets/item-3.jpg" class="img-fluid" alt="Banner 3">
                     </div>
                 </div>
                 <div class="slider-btn">
