--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@
             <div class="site-slider">
                 <div class="slider-one">
                     <div>
-                        <img src="../assets/item-1.jpg" class="img-fluid" alt="Banner 1">
+                        <img src="./assets/item-1.jpg" class="img-fluid" alt="Banner 1">
                     </div>
                     <div>
-                        <img src="../assets/item-2.jpg" class="img-fluid" alt="Banner 2">
+                        <img src="./assets/item-2.jpg" class="img-fluid" alt="Banner 2">
                     </div>
                     <div>
-                        <img src="../assets/item-3.jpg" class="img-fluid" alt="Banner 3">
+                        <img src="./assets/item-3.jpg" class="img-fluid" alt="Banner 3">
                     </div>
                 </div>
                 <div class="slider-btn">
